--- a/.github/workflows/ecr-test.yaml
+++ b/.github/workflows/ecr-test.yaml
@@ -36,5 +36,6 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
           IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}-${{ steps.get-timestamp.outputs.timestamp }}
         run: |
-          docker build -t ${{ secrets.REPO_URL }}:$IMAGE_TAG .
-          docker push ${{ secrets.REPO_URL }}:$IMAGE_TAG
+          docker build -t $IMAGE_TAG .
+          docker tag $IMAGE_TAG
+          docker push $IMAGE_TAG ${{ secrets.REPO_URL }}
