--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -13,6 +13,10 @@ jobs:
       - name: Run pytest
         uses: pavelzw/pytest-action@v2
         with:
+          verbose: true
+          emoji: true
           job-summary: true
+          custom-arguments: '-q'
+          click-to-expand: true
           report-title: 'Test Report'
         
