--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -11,15 +11,6 @@ jobs:
       - name: pip
         run: |
           pip3 install pytest
-          pip3 install pytest-md
-          pip3 install pytest-emoji
       - name: Run pytest
-        uses: pavelzw/pytest-action@v2
-        with:
-          verbose: true
-          emoji: true
-          job-summary: true
-          custom-arguments: '-q'
-          click-to-expand: true
-          report-title: 'Test Report'
+        run: python -m pytest test
         
