--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -12,5 +12,5 @@ jobs:
         run: |
           pip3 install pytest          
       - name: Run pytest
-        run: python -m pytest ${{ github.workspace }}\repo\test
+        run: python -m pytest ${{ github.workspace }}\test
          
