--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -10,7 +10,11 @@ jobs:
     steps:
       - name: pip
         run: |
-          pip3 install pytest          
+          pip3 install pytest   
+      - name: checkout
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: test
       - name: Run pytest
         run: python -m pytest ${{ github.workspace }}
          
