--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -16,5 +16,5 @@ jobs:
         with:
           sparse-checkout: test
       - name: Run pytest
-        run: python -m pytest ${{ github.workspace }}
+        run: python -m pytest 
          
