--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: pip
         run: |
           pip3 install pytest
-          pip3 install -r ./requirements.txt
+          pip3 install -r ./apiapp/requirements.txt
 
       - name: Run pytest
         run: python -m pytest test
