--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -18,5 +18,8 @@ jobs:
           pip3 install -r ./apiapp/requirements.txt
 
       - name: Run pytest
-        run: py -m venv pytest test
+        run: |
+          pip install pytest pytest-cov
+          pytest test --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        # py -m venv pytest test
          
