--- a/.github/workflows/ecr-test.yaml
+++ b/.github/workflows/ecr-test.yaml
@@ -17,7 +17,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ECR_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          aws ecr get-login-password --region us-east-1
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS_ACCESS_KEY_ID --password-stdin  ${{ secrets.REPO_URL }}
 
       - name: Login to Amazon ECR Public
         id: login-ecr
