--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -26,10 +26,10 @@ jobs:
           # pip install junit
 
       - name: Run pytest
-        env:
-          PERMITTED_ORIGINS: "[]"
         run: |
+          echo PERMITTED_ORIGINS:[] > .env
           pip install pytest pytest-cov
           pytest test --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          del .env
         # py -m venv pytest test
          
