--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -19,6 +19,7 @@ jobs:
     
       - name: pip
         run: |
+          python -m pip install --upgrade pip
           pip install pytest
           pip install moto
           pip install -r ./apiapp/requirements.txt
@@ -27,9 +28,9 @@ jobs:
 
       - name: Run pytest
         run: |
-          echo PERMITTED_ORIGINS:[] > .env
+          echo PERMITTED_ORIGINS:[] > ${GITHUB_WORKSPACE}\apipp\.env
           pip install pytest pytest-cov
           pytest test --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-          del .env
+          del ${GITHUB_WORKSPACE}\apipp\.env
         # py -m venv pytest test
          
