--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -28,9 +28,9 @@ jobs:
 
       - name: Run pytest
         run: |
-          echo PERMITTED_ORIGINS:[] > ${GITHUB_WORKSPACE}\apipp\.env
+          echo PERMITTED_ORIGINS:[] > apipp\.env
           pip install pytest pytest-cov
           pytest test --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-          del ${GITHUB_WORKSPACE}\apipp\.env
+          del apipp\.env
         # py -m venv pytest test
          
