--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -28,14 +28,11 @@ jobs:
       - name: Get commit hash
         id: get-commit-hash
         run: echo "::set-output name=commit-hash::$(git rev-parse --short HEAD)"
-      - name: Get timestamp
-        id: get-timestamp
-        run: echo "::set-output name=timestamp::$(date +'%Y-%m-%d-%H-%M')"
 
       - name: Build, tag, and push the image to Amazon ECR
         id: build-image
         env:
-          IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}-${{ steps.get-timestamp.outputs.timestamp }}
+          IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}
         run: |
           docker build -t ${{ secrets.REPO_URL }}:$IMAGE_TAG .
           docker push ${{ secrets.REPO_URL }}:$IMAGE_TAG
